name:                freer-logger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/osa1/freer-logger
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
copyright:           2017 Ömer Sinan Ağacan
category:            Logging, Effect
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/osa1/freer-logger

library
  hs-source-dirs:      src
  exposed-modules:
    Control.Monad.Freer.Logger

  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    fast-logger,
    freer,
    monad-logger,
    template-haskell,
    text

  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

test-suite freer-logger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:
    base,
    bytestring,
    freer,
    freer-logger,
    mtl,
    text

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  default-language:    Haskell2010
